--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ footer {
 #image1, #image2 {
   float: none;
   margin-right: 60px;
+  width: 400px ;
 }
 .container1 {
   display: inline;
@@ -96,6 +97,7 @@ footer {
 #image3 {
   float: none;
   margin-right: 60px;
+  width: 500px ;
 }
 #tab {
   display: hidden;
